--- a/components/LocationInput/LocationInput.css
+++ b/components/LocationInput/LocationInput.css
@@ -4,8 +4,10 @@ body {
 }
 
 #app {
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .autocomplete-container input,
